--- a/style.css
+++ b/style.css
@@ -1,73 +1,78 @@
-body {
-    background-color: #0033cc;
-    font-family: 'Arial', sans-serif;
-    margin: 0;
-    padding: 0;
-    color: #fff;
+body, html{
+  height:100%;
+  margin:0;
+  font-size:16px;
+  font-family:"Lato", sans-serif;
+  font-weight:400;
+  line-height:1.8em;
+  color: #f2f2f2;
+  background-color: #121212;
+}
+.myimg {
+	border: 8px solid black;
+	float: right;
+	margin-right: 5%;
+	margin-top: 3%;
+	border-radius: 50%;
+	padding: 5px;
+	width: 300px;
 }
 
 nav {
-    background: rgba(0, 0, 0, 0.7);
-    padding: 15px 0;
-    text-align: center;
+  position: fixed;
+  z-index: 100;
+  top: 0;
+  background-color: grey;
+  width: 100%;
+  height: 30px;
+  text-align: center;
 }
 
-nav ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-    justify-content: center;
-    gap: 30px;
+nav a{
+  color: white;
+  text-decoration: none;
+  font-size: 18px;
+  padding: 0 30px 0 30px;
+  vertical-align: middle;
 }
 
-nav ul li {
-    display: inline-block;
+nav a:hover{
+  color: black;
 }
 
-nav ul li a {
-    color: #ffeb3b;
-    text-decoration: none;
-    font-weight: bold;
-    font-size: 20px;
-    padding: 10px 15px;
-    transition: color 0.3s ease, background 0.3s ease;
-    border-radius: 5px;
+#Intro{
+  width: 80%;
+  padding-left: 5%;
+  padding-top: 15%;
+  padding-bottom: 10%;
 }
 
-nav ul li a:hover {
-    color: #0033cc;
-    background: #ffeb3b;
+#Visualization{
+  padding-top: 30px;
+  padding-bottom: 10%;
+  padding-right: 5%;
+  padding-left: 5%;
 }
 
-.content {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    text-align: center;
-    flex-direction: column;
+#Presentation{
+  padding-top: 30px;
+  padding-bottom: 10%;
 }
 
-h1 {
-    font-size: 2.5em;
-    text-align: center;
-    animation: fadeIn 2s ease-in-out;
+#Credits{
+  width: 80%;
+  padding-left: 5%;
+  padding-top: 30px;
+  padding-bottom: 5%;
 }
 
-p {
-    font-size: 1.2em;
-    text-align: center;
+#Credits a:link, a:visited{
+  text-decoration: none;
+  color: #f2f2f2;
 }
 
-@keyframes fadeIn {
-    0% { opacity: 0; }
-    100% { opacity: 1; }
-}
-
-img {
-    display: block;
-    margin: 20px auto;
-    border-radius: 10px;
-    max-width: 100%;
+iframe{
+  margin: 0 auto;
+  display: block;
+  border-style: none;
 }
