--- a/style.css
+++ b/style.css
@@ -1,78 +1,47 @@
-body, html{
-  height:100%;
-  margin:0;
-  font-size:16px;
-  font-family:"Lato", sans-serif;
-  font-weight:400;
-  line-height:1.8em;
-  color: #f2f2f2;
-  background-color: #121212;
-}
-.myimg {
-	border: 8px solid black;
-	float: right;
-	margin-right: 5%;
-	margin-top: 3%;
-	border-radius: 50%;
-	padding: 5px;
-	width: 300px;
+body {
+    background-color: #0033cc;
+    font-family: 'Arial', sans-serif;
+    margin: 0;
+    padding: 0;
+    color: #fff;
 }
 
 nav {
-  position: fixed;
-  z-index: 100;
-  top: 0;
-  background-color: grey;
-  width: 100%;
-  height: 30px;
-  text-align: center;
+    background: rgba(0, 0, 0, 0.7);
+    padding: 15px 0;
+    text-align: center;
 }
 
-nav a{
-  color: white;
-  text-decoration: none;
-  font-size: 18px;
-  padding: 0 30px 0 30px;
-  vertical-align: middle;
+nav a {
+    color: #ffeb3b;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 20px;
+    padding: 10px 15px;
+    margin: 0 10px;
+    transition: color 0.3s ease, background 0.3s ease;
+    border-radius: 5px;
 }
 
-nav a:hover{
-  color: black;
+nav a:hover {
+    color: #0033cc;
+    background: #ffeb3b;
 }
 
-#Intro{
-  width: 80%;
-  padding-left: 5%;
-  padding-top: 15%;
-  padding-bottom: 10%;
+h1 {
+    font-size: 2.5em;
+    text-align: center;
 }
 
-#Visualization{
-  padding-top: 30px;
-  padding-bottom: 10%;
-  padding-right: 5%;
-  padding-left: 5%;
+p {
+    font-size: 1.2em;
+    text-align: center;
 }
 
-#Presentation{
-  padding-top: 30px;
-  padding-bottom: 10%;
+img {
+    display: block;
+    margin: 20px auto;
+    border-radius: 10px;
+    max-width: 100%;
 }
 
-#Credits{
-  width: 80%;
-  padding-left: 5%;
-  padding-top: 30px;
-  padding-bottom: 5%;
-}
-
-#Credits a:link, a:visited{
-  text-decoration: none;
-  color: #f2f2f2;
-}
-
-iframe{
-  margin: 0 auto;
-  display: block;
-  border-style: none;
-}
