--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ h1 {
     margin: 20px auto;
     padding: 20px;
     border: 2px solid #333;
-    background-color: white;
+    background-color: blue;
     text-align: justify;
     border-radius: 10px;
 }
