--- a/style.css
+++ b/style.css
@@ -36,12 +36,12 @@ h1 {
 .about-container {
     width: 50%;
     max-width: 200px;
+    height: 200px;
     margin: 10px auto;
     padding: 10px;
     border: 2px solid #333;
     background-color: coral;
     text-align: justify;
-    border-radius: 5px;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
 }
 
@@ -63,10 +63,10 @@ h1 {
 
 .image-text-container {
     display: flex;
-    align-items: center; 
+    align-items: center;
     justify-content: center;
-    gap: 20px; 
+    gap: 20px;
     max-width: 300px;
-    margin: 20px auto; 
-    text-align: left; 
+    margin: 20px auto;
+    text-align: left;
 }
