--- a/style.css
+++ b/style.css
@@ -112,5 +112,5 @@ h1 {
 .title-of-mytext {
     font-size: 2em;
     font-weight: bold;
-    color: blue;
+    color: darkred;
     text-align: center; /* Κεντράρισμα της επικεφαλίδας */
